--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas "
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv()"
    ]
   },
   {
