Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,13 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6905 entries, 0 to 6904\n",
+      "Data columns (total 4 columns):\n",
+      "Frequency            6905 non-null object\n",
+      "Euro                 4838 non-null float64\n",
+      "Australian Dollar    4838 non-null float64\n",
+      "Danish Krone         4838 non-null float64\n",
+      "dtypes: float64(3), object(1)\n",
+      "memory usage: 215.9+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv()"
+    "df = pd.read_csv('exch_rates.csv')\n",
+    "df.info()"
    ]
   },
   {
