--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('exch_rates.csv')\n",
-    "df['Frequency']"
+    "df['Frequency'] = pd.to_datetime(df['Frequency'])"
    ]
   },
   {
