Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,95 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Frequency</th>\n",
-       "      <th>Euro</th>\n",
-       "      <th>Australian Dollar</th>\n",
-       "      <th>Danish Krone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2000-01-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000-01-02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2000-01-03</td>\n",
-       "      <td>0.991080</td>\n",
-       "      <td>1.520912</td>\n",
-       "      <td>7.374034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2000-01-04</td>\n",
-       "      <td>0.970403</td>\n",
-       "      <td>1.521300</td>\n",
-       "      <td>7.222610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2000-01-05</td>\n",
-       "      <td>0.964506</td>\n",
-       "      <td>1.521316</td>\n",
-       "      <td>7.180170</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Frequency      Euro  Australian Dollar  Danish Krone\n",
-       "0  2000-01-01       NaN                NaN           NaN\n",
-       "1  2000-01-02       NaN                NaN           NaN\n",
-       "2  2000-01-03  0.991080           1.520912      7.374034\n",
-       "3  2000-01-04  0.970403           1.521300      7.222610\n",
-       "4  2000-01-05  0.964506           1.521316      7.180170"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6905 entries, 0 to 6904\n",
+      "Data columns (total 4 columns):\n",
+      "Frequency            6905 non-null datetime64[ns]\n",
+      "Euro                 4838 non-null float64\n",
+      "Australian Dollar    4838 non-null float64\n",
+      "Danish Krone         4838 non-null float64\n",
+      "dtypes: datetime64[ns](1), float64(3)\n",
+      "memory usage: 215.9 KB\n"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('exch_rates.csv')\n",
-    "df['Frequency'] = pd.to_datetime(df['Frequency'])"
+    "df['Frequency'] = pd.to_datetime(df['Frequency'])\n",
+    "df.set_index"
    ]
   },
   {
