Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "df = pd.read_csv('exch_rates.csv')\n",
     "df['Frequency'] = pd.to_datetime(df['Frequency'])\n",
-    "df.set_index"
+    "df.set_index(['Frequency'], inplace=)"
    ]
   },
   {
