Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('exch_rates.csv')\n",
-    "\n",
+    "df.rename(columns={''})\n",
     "df['Frequency'] = pd.to_datetime(df['Frequency'])\n",
     "df.set_index(['Frequency'], inplace=True)\n",
     "df.head()"
