Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "2000-01-05  0.964506           1.521316      7.180170"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('exch_rates.csv')\n",
-    "df.rename(columns={''})\n",
+    "df.rename(columns={'Frequency':'Date'})\n",
     "df['Frequency'] = pd.to_datetime(df['Frequency'])\n",
     "df.set_index(['Frequency'], inplace=True)\n",
     "df.head()"
