Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.plot(figsize=(12,14))"
+    "df.plot(figsize=(12,14))\n",
+    "import matplotlib.pl"
    ]
   },
   {
