Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,12 +158,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1200x1400 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df.plot(figsize=(12,14))\n",
-    "import matplotlib.pl"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
