Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
     }
    ],
    "source": [
-    "df.plot(figsize=(12,14))\n",
+    "df.plot(kind=figsize=(12,14))\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.show()"
