--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_trends.plot(f)"
+    "df_trends.plot(kind='line', )"
    ]
   },
   {
