Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lag1.plot(kind='li')"
+    "df_lag1.plot(kind='line', figsize=(1)"
    ]
   },
   {
