--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_lag1 = df.shift(periods=1)"
+    "df_lag1 = df.shift(periods=1)\n",
+    "df_lag1 = pd.concat([df])"
    ]
   },
   {
