Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,8 @@
    "outputs": [],
    "source": [
     "df_lag1 = df.shift(periods=1)\n",
-    "df_lag1 = pd.concat([df_lag1, df], axis=1)"
+    "df_lag1 = pd.concat([df_lag1, df], axis=1)\n",
+    "d"
    ]
   },
   {
