--- a/index.ipynb
+++ b/index.ipynb
@@ -329,13 +329,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Euro</th>\n",
+       "      <th>Australian Dollar</th>\n",
+       "      <th>Danish Krone</th>\n",
+       "      <th>Euro</th>\n",
+       "      <th>Australian Dollar</th>\n",
+       "      <th>Danish Krone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Euro</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.883181</td>\n",
+       "      <td>0.999952</td>\n",
+       "      <td>0.999146</td>\n",
+       "      <td>0.882681</td>\n",
+       "      <td>0.999095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australian Dollar</th>\n",
+       "      <td>0.883181</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.882513</td>\n",
+       "      <td>0.882808</td>\n",
+       "      <td>0.999224</td>\n",
+       "      <td>0.882140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Danish Krone</th>\n",
+       "      <td>0.999952</td>\n",
+       "      <td>0.882513</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.999105</td>\n",
+       "      <td>0.882025</td>\n",
+       "      <td>0.999149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Euro</th>\n",
+       "      <td>0.999146</td>\n",
+       "      <td>0.882808</td>\n",
+       "      <td>0.999105</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.883181</td>\n",
+       "      <td>0.999952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australian Dollar</th>\n",
+       "      <td>0.882681</td>\n",
+       "      <td>0.999224</td>\n",
+       "      <td>0.882025</td>\n",
+       "      <td>0.883181</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.882513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Danish Krone</th>\n",
+       "      <td>0.999095</td>\n",
+       "      <td>0.882140</td>\n",
+       "      <td>0.999149</td>\n",
+       "      <td>0.999952</td>\n",
+       "      <td>0.882513</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Euro  Australian Dollar  Danish Krone      Euro  \\\n",
+       "Euro               1.000000           0.883181      0.999952  0.999146   \n",
+       "Australian Dollar  0.883181           1.000000      0.882513  0.882808   \n",
+       "Danish Krone       0.999952           0.882513      1.000000  0.999105   \n",
+       "Euro               0.999146           0.882808      0.999105  1.000000   \n",
+       "Australian Dollar  0.882681           0.999224      0.882025  0.883181   \n",
+       "Danish Krone       0.999095           0.882140      0.999149  0.999952   \n",
+       "\n",
+       "                   Australian Dollar  Danish Krone  \n",
+       "Euro                        0.882681      0.999095  \n",
+       "Australian Dollar           0.999224      0.882140  \n",
+       "Danish Krone                0.882025      0.999149  \n",
+       "Euro                        0.883181      0.999952  \n",
+       "Australian Dollar           1.000000      0.882513  \n",
+       "Danish Krone                0.882513      1.000000  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_lag1 = df.shift(periods=1)\n",
     "df_lag1 = pd.concat([df_lag1, df], axis=1)\n",
-    "d"
+    "df_lag1.corr()"
    ]
   },
   {
