Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,12 +499,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Euro</th>\n",
+       "      <th>Australian Dollar</th>\n",
+       "      <th>Danish Krone</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-02</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-03</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-08</th>\n",
+       "      <td>0.991080</td>\n",
+       "      <td>1.520912</td>\n",
+       "      <td>7.374034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-09</th>\n",
+       "      <td>0.970403</td>\n",
+       "      <td>1.521300</td>\n",
+       "      <td>7.222610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-10</th>\n",
+       "      <td>0.964506</td>\n",
+       "      <td>1.521316</td>\n",
+       "      <td>7.180170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-11</th>\n",
+       "      <td>0.962649</td>\n",
+       "      <td>1.523681</td>\n",
+       "      <td>7.166057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-12</th>\n",
+       "      <td>0.972384</td>\n",
+       "      <td>1.530338</td>\n",
+       "      <td>7.238040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-15</th>\n",
+       "      <td>0.977613</td>\n",
+       "      <td>1.523805</td>\n",
+       "      <td>7.278131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-16</th>\n",
+       "      <td>0.975039</td>\n",
+       "      <td>1.527301</td>\n",
+       "      <td>7.258580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-17</th>\n",
+       "      <td>0.970120</td>\n",
+       "      <td>1.518529</td>\n",
+       "      <td>7.222837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-18</th>\n",
+       "      <td>0.973141</td>\n",
+       "      <td>1.503503</td>\n",
+       "      <td>7.245037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-19</th>\n",
+       "      <td>0.977995</td>\n",
+       "      <td>1.499462</td>\n",
+       "      <td>7.281076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-20</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Euro  Australian Dollar  Danish Krone\n",
+       "Date                                                 \n",
+       "2000-01-01       NaN                NaN           NaN\n",
+       "2000-01-02       NaN                NaN           NaN\n",
+       "2000-01-03       NaN                NaN           NaN\n",
+       "2000-01-04       NaN                NaN           NaN\n",
+       "2000-01-05       NaN                NaN           NaN\n",
+       "2000-01-06       NaN                NaN           NaN\n",
+       "2000-01-07       NaN                NaN           NaN\n",
+       "2000-01-08  0.991080           1.520912      7.374034\n",
+       "2000-01-09  0.970403           1.521300      7.222610\n",
+       "2000-01-10  0.964506           1.521316      7.180170\n",
+       "2000-01-11  0.962649           1.523681      7.166057\n",
+       "2000-01-12  0.972384           1.530338      7.238040\n",
+       "2000-01-13       NaN                NaN           NaN\n",
+       "2000-01-14       NaN                NaN           NaN\n",
+       "2000-01-15  0.977613           1.523805      7.278131\n",
+       "2000-01-16  0.975039           1.527301      7.258580\n",
+       "2000-01-17  0.970120           1.518529      7.222837\n",
+       "2000-01-18  0.973141           1.503503      7.245037\n",
+       "2000-01-19  0.977995           1.499462      7.281076\n",
+       "2000-01-20       NaN                NaN           NaN"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_lag5 = df.shift(periods=5)\n",
-    "df_lag5.hea"
+    "df_lag5.head(20)"
    ]
   },
   {
