Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -526,6 +526,9 @@
        "      <th>Euro</th>\n",
        "      <th>Australian Dollar</th>\n",
        "      <th>Danish Krone</th>\n",
+       "      <th>Euro</th>\n",
+       "      <th>Australian Dollar</th>\n",
+       "      <th>Danish Krone</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -534,17 +537,53 @@
        "      <td>1.000000</td>\n",
        "      <td>0.883180</td>\n",
        "      <td>0.999952</td>\n",
+       "      <td>0.997518</td>\n",
+       "      <td>0.883104</td>\n",
+       "      <td>0.997434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Australian Dollar</th>\n",
        "      <td>0.883180</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.882512</td>\n",
+       "      <td>0.880283</td>\n",
+       "      <td>0.997893</td>\n",
+       "      <td>0.879557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Danish Krone</th>\n",
        "      <td>0.999952</td>\n",
        "      <td>0.882512</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.997516</td>\n",
+       "      <td>0.882504</td>\n",
+       "      <td>0.997525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Euro</th>\n",
+       "      <td>0.997518</td>\n",
+       "      <td>0.880283</td>\n",
+       "      <td>0.997516</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.883181</td>\n",
+       "      <td>0.999952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australian Dollar</th>\n",
+       "      <td>0.883104</td>\n",
+       "      <td>0.997893</td>\n",
+       "      <td>0.882504</td>\n",
+       "      <td>0.883181</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.882513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Danish Krone</th>\n",
+       "      <td>0.997434</td>\n",
+       "      <td>0.879557</td>\n",
+       "      <td>0.997525</td>\n",
+       "      <td>0.999952</td>\n",
+       "      <td>0.882513</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -552,20 +591,31 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Euro  Australian Dollar  Danish Krone\n",
-       "Euro               1.000000           0.883180      0.999952\n",
-       "Australian Dollar  0.883180           1.000000      0.882512\n",
-       "Danish Krone       0.999952           0.882512      1.000000"
+       "                       Euro  Australian Dollar  Danish Krone      Euro  \\\n",
+       "Euro               1.000000           0.883180      0.999952  0.997518   \n",
+       "Australian Dollar  0.883180           1.000000      0.882512  0.880283   \n",
+       "Danish Krone       0.999952           0.882512      1.000000  0.997516   \n",
+       "Euro               0.997518           0.880283      0.997516  1.000000   \n",
+       "Australian Dollar  0.883104           0.997893      0.882504  0.883181   \n",
+       "Danish Krone       0.997434           0.879557      0.997525  0.999952   \n",
+       "\n",
+       "                   Australian Dollar  Danish Krone  \n",
+       "Euro                        0.883104      0.997434  \n",
+       "Australian Dollar           0.997893      0.879557  \n",
+       "Danish Krone                0.882504      0.997525  \n",
+       "Euro                        0.883181      0.999952  \n",
+       "Australian Dollar           1.000000      0.882513  \n",
+       "Danish Krone                0.882513      1.000000  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_lag5 = df.shift(periods=5)\n",
-    "df_lag5 = df.\n",
+    "df_lag5 = pd.concat([df_lag5, df], axis=1)\n",
     "df_lag5.corr()"
    ]
   },
