--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "df_lag5.plot(kind='line', figsize=())"
    ]
   },
   {
