Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -693,7 +693,7 @@
    ],
    "source": [
     "plt.figure(figsize=(12,5))\n",
-    "pd.plotting.auto_correlation(df)"
+    "pd.plotting.autocorrelation(df)"
    ]
   },
   {
