--- a/index.ipynb
+++ b/index.ipynb
@@ -667,16 +667,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f455d2e1da0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f455d275d68>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
