Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -694,7 +694,7 @@
     }
    ],
    "source": [
-    "from statsmodels.graphics.tsaplots import plot_pacf\n",
+    "from statsmodels.graphics.tsaplots import plot_acf\n",
     "\n",
     "plt.figure(figsize=(12,5))\n",
     "pd.plotting.autocorrelation_plot(df)"
