Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -710,7 +710,7 @@
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "\n",
     "plt.figure(figsize=(12,5))\n",
-    "plot_acf(df)"
+    "plot_acf(df, )"
    ]
   },
   {
