--- a/index.ipynb
+++ b/index.ipynb
@@ -707,7 +707,7 @@
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "\n",
     "plt.figure(figsize=(12,5))\n",
-    "plot_acf(df['Euro'], lags=100)"
+    "plot_acf(df['Euro', lags=100)"
    ]
   },
   {
