Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -704,10 +704,8 @@
     }
    ],
    "source": [
-    "from statsmodels.graphics.tsaplots import plot_acf\n",
-    "\n",
     "plt.figure(figsize=(12,5))\n",
-    "plot_acf(df['Euro', lags=100)"
+    "pd.plotting.autocorrelation_plot(df[''])"
    ]
   },
   {
