Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -717,37 +717,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>0.991080</td>\n",
-       "      <td>1.520912</td>\n",
-       "      <td>7.374034</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>0.970403</td>\n",
-       "      <td>1.521300</td>\n",
-       "      <td>7.222610</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>0.964506</td>\n",
-       "      <td>1.521316</td>\n",
-       "      <td>7.180170</td>\n",
+       "      <td>0.99108</td>\n",
+       "      <td>1.520912</td>\n",
+       "      <td>7.374034</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Euro  Australian Dollar  Danish Krone\n",
-       "Date                                                 \n",
-       "2000-01-01       NaN                NaN           NaN\n",
-       "2000-01-02       NaN                NaN           NaN\n",
-       "2000-01-03  0.991080           1.520912      7.374034\n",
-       "2000-01-04  0.970403           1.521300      7.222610\n",
-       "2000-01-05  0.964506           1.521316      7.180170"
+       "               Euro  Australian Dollar  Danish Krone\n",
+       "Date                                                \n",
+       "2000-01-01      NaN                NaN           NaN\n",
+       "2000-01-02      NaN                NaN           NaN\n",
+       "2000-01-03      NaN                NaN           NaN\n",
+       "2000-01-04      NaN                NaN           NaN\n",
+       "2000-01-05  0.99108           1.520912      7.374034"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -766,6 +766,7 @@
    ],
    "source": [
     "plt.figure(figsize=(12,5))\n",
+    "df = df.shift(periods=2)\n",
     "pd.plotting.autocorrelation_plot(df)\n",
     "df.head()"
    ]
