Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -767,8 +767,7 @@
    "source": [
     "plt.figure(figsize=(12,5))\n",
     "\n",
-    "pd.plotting.autocorrelation_plot(df)\n",
-    "df.head()"
+    "pd.plotting.autocorrelation_plot(df)"
    ]
   },
   {
