--- a/index.ipynb
+++ b/index.ipynb
@@ -790,7 +790,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "from statsmodels.graphics.tsaplots import plot_pacf\n",
+    "from matplotlib.pylab import rcParams\n",
+    "\n",
+    "rcParams['figure.figsize'] = 14, 5\n",
+    "\n",
+    "plot_pacf(diet, lags = 100);"
    ]
   },
   {
