--- a/index.ipynb
+++ b/index.ipynb
@@ -667,87 +667,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Euro</th>\n",
-       "      <th>Australian Dollar</th>\n",
-       "      <th>Danish Krone</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2000-01-01</th>\n",
-       "      <td>0.991080</td>\n",
-       "      <td>1.520912</td>\n",
-       "      <td>7.374034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-01-02</th>\n",
-       "      <td>0.970403</td>\n",
-       "      <td>1.521300</td>\n",
-       "      <td>7.222610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-01-03</th>\n",
-       "      <td>0.964506</td>\n",
-       "      <td>1.521316</td>\n",
-       "      <td>7.180170</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-01-04</th>\n",
-       "      <td>0.962649</td>\n",
-       "      <td>1.523681</td>\n",
-       "      <td>7.166057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-01-05</th>\n",
-       "      <td>0.972384</td>\n",
-       "      <td>1.530338</td>\n",
-       "      <td>7.238040</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                Euro  Australian Dollar  Danish Krone\n",
-       "Date                                                 \n",
-       "2000-01-01  0.991080           1.520912      7.374034\n",
-       "2000-01-02  0.970403           1.521300      7.222610\n",
-       "2000-01-03  0.964506           1.521316      7.180170\n",
-       "2000-01-04  0.962649           1.523681      7.166057\n",
-       "2000-01-05  0.972384           1.530338      7.238040"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f45592f15c0>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -767,7 +696,7 @@
    "source": [
     "plt.figure(figsize=(12,5))\n",
     "\n",
-    "pd.plotting.autocorrelation_plot(df)"
+    "pd.plotting.autocorrelation_plot(df[['Euro']])"
    ]
   },
   {
