Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -767,7 +767,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "passengers = pd.read_csv()"
    ]
   },
   {
