Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -837,7 +837,8 @@
    ],
    "source": [
     "passengers = pd.read_csv('passengers.csv')\n",
-    "passengers.head()"
+    "\n",
+    "passengers.set_index()"
    ]
   },
   {
