Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -838,7 +838,7 @@
    "source": [
     "passengers = pd.read_csv('passengers.csv')\n",
     "\n",
-    "passengers.set_index()"
+    "passengers.set_index(['Month'], inp)"
    ]
   },
   {
