--- a/index.ipynb
+++ b/index.ipynb
@@ -763,7 +763,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passengers = pd.read_csv('passengers.csv')\n",
+    "\n",
+    "passengers.set_index(['Month'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -787,34 +798,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Month</th>\n",
        "      <th>#Passengers</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1949-01-01</td>\n",
+       "      <th>1949-01-01</th>\n",
        "      <td>112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1949-02-01</td>\n",
+       "      <th>1949-02-01</th>\n",
        "      <td>118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1949-03-01</td>\n",
+       "      <th>1949-03-01</th>\n",
        "      <td>132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1949-04-01</td>\n",
+       "      <th>1949-04-01</th>\n",
        "      <td>129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1949-05-01</td>\n",
+       "      <th>1949-05-01</th>\n",
        "      <td>121</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -822,32 +831,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        Month  #Passengers\n",
-       "0  1949-01-01          112\n",
-       "1  1949-02-01          118\n",
-       "2  1949-03-01          132\n",
-       "3  1949-04-01          129\n",
-       "4  1949-05-01          121"
+       "            #Passengers\n",
+       "Month                  \n",
+       "1949-01-01          112\n",
+       "1949-02-01          118\n",
+       "1949-03-01          132\n",
+       "1949-04-01          129\n",
+       "1949-05-01          121"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "passengers = pd.read_csv('passengers.csv')\n",
-    "\n",
-    "passengers.set_index(['Month'], inp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here"
+    "passengers.head()"
    ]
   },
   {
