Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -787,7 +787,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10,12))"
+    "plt.figure(figsize=(10,12))\n",
+    "\n",
+    "pd.plotting.autoc"
    ]
   },
   {
