Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -785,11 +785,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f45592e28d0>"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.figure(figsize=(10,12))\n",
     "\n",
-    "pd.plotting.autoc"
+    "pd.plotting.autocorrelation_plot(passengers)"
    ]
   },
   {
