Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -821,7 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "au"
+    "pd.plotting.autocorrelation_plot(passengers_diff)"
    ]
   },
   {
