Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -956,8 +956,9 @@
    "source": [
     "stonks = pd.read_csv('NYSE_monthly.csv')\n",
     "\n",
-    "pd.to_dati\n",
-    "stonks.set_index()"
+    "pd.to_datetime(stonks['Month'], inplace=True)\n",
+    "stonks.set_index(['Month'], inplace=True)\n",
+    "stonks.inf"
    ]
   },
   {
